--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -39,12 +39,37 @@
 .header_menu_icon {
   display: none;
 }
+
+.header__sidebar {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 300px;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+}
+.header__sidebar a {
+  display: block;
+  margin: 10px 0;
+  text-decoration: none;
+  font-size: 18px;
+}
 @media (max-width: 768px) {
+  .outer_header_wrapper {
+    width: 100%;
+  }
   .right_side_links {
     display: none;
   }
   .header_menu_icon {
     display: block;
+  }
+  .header__sidebar {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 1200px) {
