--- a/client/src/Pages/Home/home.module.css
+++ b/client/src/Pages/Home/home.module.css
@@ -18,6 +18,7 @@
   margin: 10px 0 20px 0;
 }
 .ask_question_btn {
+  cursor: pointer;
   padding: 10px;
   background-color: #0d6efd;
   border: none;
