--- a/client/src/Pages/Landing/landing.module.css
+++ b/client/src/Pages/Landing/landing.module.css
@@ -8,14 +8,19 @@
   justify-content: space-between;
   width: 80.2%;
   margin: auto;
+  margin-top: 10px;
 }
 
 .outer_signUp_container {
-  padding: 40px 0;
+  padding: 40px 10;
+  width: 100%;
+  margin: auto;
 }
+
 .signUp_container {
   background-color: #fff;
-  width: 564px;
+  width: 95%;
+  padding-right: 30px;
   height: 395px;
   margin-top: 39px;
   padding: 30px 0px 92px 40px;
@@ -126,11 +131,14 @@
   padding: 0 4px;
 }
 
-@media (max-width: 769px) {
-  .landing_page_container {
-    display: block;
-    width: 95%;
-    margin: auto;
+@media (max-width: 768px) {
+  .outer_signUp_container {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .outer_landing_page {
+    margin-bottom: 30px;
   }
 }
 @media (min-width: 1550px) {
