--- a/client/src/components/About/about.module.css
+++ b/client/src/components/About/about.module.css
@@ -3,10 +3,10 @@
   margin-left: 20px;
 }
 .about_container {
-  width: 564px;
+  width: 100%;
   margin: auto;
   margin-top: 39px;
-  padding: 50px 20px 92px 20px;
+  padding: 50px 0px 92px 20px;
   align-items: center;
 }
 .about_container h1 {
@@ -40,5 +40,6 @@
 @media (max-width: 768px) {
   .outer_about_wrapper {
     display: none;
+    
   }
 }
